--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
    <h1>Hello!!!</h1> 
-   <iframe src="https://giphy.com/embed/Ju7l5y9osyymQ" width="700" height="600" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><a href="https://giphy.com/gifs/rick-astley-Ju7l5y9osyymQ"></a>
+   <div class="tenor-gif-embed" data-postid="22113173" data-share-method="host" data-aspect-ratio="0.74375" data-width="60%"><a href="https://tenor.com/view/rick-roll-rick-ashley-never-gonna-give-you-up-gif-22113173">Rick Roll Rick Ashley GIF</a>from <a href="https://tenor.com/search/rick+roll-gifs">Rick Roll GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script> 
 </body>
 </html>
