--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/views/style.css" media=”screen” />
+    <link rel="stylesheet" type="text/css" href="stylesheets/materialize.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet"> 
 </head>
 <body>
-   <h1>Hello!!!</h1> 
-   <div class="tenor-gif-embed" data-postid="22113173" data-share-method="host" data-aspect-ratio="0.74375" data-width="60%"><a href="https://tenor.com/view/rick-roll-rick-ashley-never-gonna-give-you-up-gif-22113173">Rick Roll Rick Ashley GIF</a>from <a href="https://tenor.com/search/rick+roll-gifs">Rick Roll GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script> 
+    <nav>
+        <div class="nav-wrapper" id="navbar">
+            <a href="#" class="brand-logo" ><img src="media/logo.png" style="height: 100px; width: 100px;"/></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="projects.ejs">Projects</a></li>
+                <li><a href="about.ejs">About Me</a></li>
+                <li><a href="contact.ejs">Contact Me</a></li>
+              </ul>
+        </div>
+    </nav>
+    <div class="row">
+        <div class="col s3" id="nav">
+            <h1>Hello!!!</h1> 
+            <div class="tenor-gif-embed" data-postid="22113173" data-share-method="host" data-aspect-ratio="0.74375" data-width="60%"><a href="https://tenor.com/view/rick-roll-rick-ashley-never-gonna-give-you-up-gif-22113173">Rick Roll Rick Ashley GIF</a>from <a href="https://tenor.com/search/rick+roll-gifs">Rick Roll GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script> 
+        </div>
+        <div class="col s9">
+            <h2>Hey</h2>
+        </div>
+    </div>
+   <script type="text/javascript" src="javascripts/materialize.js"></script>
 </body>
 </html>
