--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="media/icon.ico"/>
+    <title>The most amazing website you've ever seen</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/materialize.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,10 +16,10 @@
     <nav>
         <div class="nav-wrapper" id="navbar">
             <a href="#" class="brand-logo" ><img src="media/logo.png" style="height: 100px; width: 100px;"/></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="projects.ejs">Projects</a></li>
-                <li><a href="about.ejs">About Me</a></li>
-                <li><a href="contact.ejs">Contact Me</a></li>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="../views/projects.ejs">Projects</a></li>
+                <li><a href="../views/about.ejs">About Me</a></li>
+                <li><a href="../views/contact.ejs">Contact Me</a></li>
               </ul>
         </div>
     </nav>
